--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "5bffff3a-c737-40b6-ad9e-159c82e716ea"
 authors = ["your-name"]
 version = "0.1.0"
 
+[deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Term = "22787eb5-b846-44ae-b979-8e399b8463ab"
+UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
+
 [compat]
 julia = "1"
 
